# Paper_RAG

./: .gitignore  CLAUDE.md  GAPS.md  PROJECT.md  README.md  SYSTEM_DESIGN.md  app.py  bench.py  config.py  pyproject.toml
.claude/: launch.json
ragcore/: embed.py  generate.py  ingest.py  jobs.py  present.py  store.py
tests/: eval_questions.jsonl  eval_retrieval.py  fixtures.py  test_generate.py  test_jobs.py  test_present.py  test_smoke.py
